# millipede

./: .gitignore  .npmrc  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/academy/: DEPLOY.md  astro.config.mjs  package.json  wrangler.toml
apps/academy/src/components/: lesson-widgets.ts
apps/academy/src/content/: config.ts
apps/academy/src/content/lessons/: 0-1-what-is-a-computer.mdx  0-9-god-project-mental-model.mdx
apps/academy/src/layouts/: BaseLayout.astro
apps/academy/src/pages/: index.astro
apps/academy/src/pages/lessons/: [slug].astro
docs/: academy-deploy-checklist.md  work-alignment.md
infra/docker/: docker-compose.yml  init-db.sql
logs/: README.md
questions_snapshot/: 2026-07-05-docker-compose-explained.md  2026-07-05-github-cloudflare-pages-setup.md  2026-07-05-infra-and-ingestion-qa.md  README.md
services/analyzer/: Cargo.toml
services/analyzer/src/: lib.rs
services/gateway/: Cargo.toml
services/gateway/src/: lib.rs
services/ingestion/: Cargo.toml
services/ingestion/src/: main.rs
services/llm-worker/: README.md
