[workspace]
resolver = "2"
members = [
  "services/ingestion",
  "services/gateway",
  "services/analyzer",
  "packages/redact-wasm",
]

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rdkafka = { version = "0.37", features = ["cmake-build"] }
